[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/main/ui/squeak/gy/squeak-theme-h4.tres" type="Theme" id=1]
[ext_resource path="res://src/main/ui/candy-button/hsv-slider.gd" type="Script" id=2]
[ext_resource path="res://src/main/ui/HSliderGamepadHelper.tscn" type="PackedScene" id=3]

[node name="HsvSlider" type="HBoxContainer"]
size_flags_vertical = 4
theme = ExtResource( 1 )
custom_constants/separation = 0
script = ExtResource( 2 )

[node name="TextLabel" type="Label" parent="."]
margin_right = 15.0
margin_bottom = 20.0
rect_min_size = Vector2( 15, 0 )
align = 1

[node name="HSlider" type="HSlider" parent="."]
margin_left = 15.0
margin_right = 31.0
margin_bottom = 18.0
size_flags_horizontal = 3
max_value = 255.0
tick_count = 8

[node name="HSliderGamepadHelper" parent="HSlider" instance=ExtResource( 3 )]
sliding_speed = 128.0

[node name="ValueLabel" type="Label" parent="."]
margin_left = 31.0
margin_right = 61.0
margin_bottom = 20.0
rect_min_size = Vector2( 30, 0 )
text = "0"
align = 1

[connection signal="value_changed" from="HSlider" to="." method="_on_HSlider_value_changed"]
